<resources>

    <!-- General -->
    <string name="example_title">ExampleFragment</string>
    <string name="example_random_description">Press the button to generate a random number</string>
    <string name="example_randomize">Randomize</string>
    <string name="example_wolox">WOLOX</string>
    <string name="example_wolox_phone">0800 123 4567</string>
    <string name="example_message">The presenter generated the number %1$d and this view is displaying it</string>
    <string name="view_pager_title">Username: %1$s\nFavourite color: %2$s</string>
    <string name="random_toolbar_title">Random number example</string>
    <string name="request_toolbar_title">Example Request</string>
    <string name="fragment_example_username">Username</string>
    <string name="fragment_example_favourite_color">Your favourite color</string>
    <string name="fragment_example_login">Login</string>
	<string name="fragment_request_search">Search</string>
    <string name="fragment_request_post_id">Post id</string>
    <string name="fragment_request_invalid_input">Invalid input, please enter a valid id.</string>

    <!-- Login -->
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_main_button">Log In</string>
    <string name="login_sign_up_button">Sign Up</string>
    <string name="login_terms_conditions_text">By joining you agree to our </string>
    <string name="login_terms_conditions_link"><u>Terms &amp; Conditions</u></string>

    <!-- Validation -->
    <string name="emailEmptyError">Email can\'t be empty</string>
    <string name="emailInvalidError">Invalid email address</string>
    <string name="passwordEmptyError">Password can\'t be empty</string>

    <!-- Navigation -->
    <string name="termConditionsUrl">www.wolox.com.ar/</string>
    <string name="logout"><u>Logout</u></string>

    <!-- Home -->
    <string name="wolox">Wolox</string>
    
    <!-- Tabs -->
    <string name="news">NEWS</string>
    <string name="profile">PROFILE</string>

    <!-- News Detail -->
    <string name="post">Post</string>

    <!-- View messages -->
    <string name="newsNotFound">There isn\'t News with the given ID</string>
    <string name="networkConnectionError">Network connection error</string>
</resources>